@@ -4,9 +4,13 @@ Revision history for Mason-Tidy
 
 2.54  Sep 20, 2012
 
+- Don't tidy lines starting with % in <%args> and other special sections (Nic Wolff)
+- Don't lose final newline (Giovanni Pensa)
+- Add --pipe option (Mark Grimes)
+
 2.53  Sep 20, 2012
 
-- Tidy <%perl> blocks and %-lines together [Shane McCarron]
+- Tidy <%perl> blocks and %-lines together (Shane McCarron)
 - Indent <%perl> blocks initially by 2 spaces, others by 0 by default
 - Use default perltidy settings (4 space indentation) for %-lines
 - Handle non-<%perl> blocks even when tags are not on their own lines
@@ -19,7 +23,7 @@ Revision history for Mason-Tidy
 2.51  Sep 14, 2012
 
 - Fix various bugs in CLI
-- Use --noprofile in tests so that user's .perltidyrc doesn't break tests [Pedro Melo]
+- Use --noprofile in tests so that user's .perltidyrc doesn't break tests (Pedro Melo)
 - Add get_options to parse argv outside CLI
 - Add Test::Class::Most dependency
 
